Fixed broken CSS for flash notices: background colour was commented out.

--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -446,6 +446,7 @@ div.fieldWithError { outline: 1px solid red; }
 .flash .notice {
   /* FIXME */
   /* background: #dee9f4 url(/images/) 1.5em 1em no-repeat; */
+  background-color: #dee9f4;
   border-top: 1px solid #b4c5d5;
   border-bottom: 1px solid #b4c5d5;
 }
